@@ -1,5 +1,0 @@
-package org.apache.hama.bsp;
-
-public class Work {
-
-}
